# tab

./: .gitignore  404.html  CHANGELOG.md  LICENSE  Makefile  README.md  azure.md  gen_assets.sh  index.html  mkdocs.yml  pyproject.toml
azure/: index.html
cli-ref/: index.html
docs/: cli-ref.md  gen_assets.sh
search/: search_index.json
src/tab_cli/: cli.py
src/tab_cli/formats/: avro.py  csv.py  jsonl.py  parquet.py
src/tab_cli/handlers/: __init__.py  base.py  cli_table.py
tab_cli/: cli.py  config.py  style.py  url_parser.py
tab_cli/formats/: parquet.py
tab_cli/handlers/: __init__.py  avro.py  base.py  cli_table.py  csv.py  directory.py  jsonl.py  parquet.py
tab_cli/storage/: __init__.py  aws.py  az.py  fsspec.py  gcloud.py
tests/: test_cli.py
