[project]
name = "tab-cli"
version = "0.1.0"
description = "A CLI tool for tabular data"
authors = [{name = "Tongfei Chen", email = "tongfei@pm.me"}]
readme = "README.md"
repository = "https://github.com/tongfei/tab"
requires-python = ">=3.10"
dependencies = [
    "fire>=0.5",
    "rich>=13.0",
    "polars>=1.0",
    "pyarrow>=15.0",
    "blobfile>=3.0",
]

[project.scripts]
tab = "tab_cli.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.14.14",
    "ty>=0.0.14",
]
